# fastapi-ollama-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: dependencies.py  routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: document_service.py  embedding_service.py  ollama_service.py  rag_service.py
app/static/: app.js  styles.css
app/storage/: __init__ .py  faiss_store.py  interface.py  qdrant_store.py  vector_store.py
app/templates/: index.html
scripts/: build_index.py
